# level2/task2/types/response.go
@@ -8,9 +8,3 @@ type BlockResponse struct {
 	Timestamp  uint64 `json:"timestamp"`
 	TxCount    int    `json:"tx_count"`
 }
-
-// ErrorResponse 错误响应
-type ErrorResponse struct {
-	Code    int    `json:"code"`
-	Message string `json:"message"`
-}
